tests/ui/rfcs/rfc-2632-const-trait-impl/const-impl-requires-const-trait.stderr
error: const `impl` for trait `A` which is not marked with `#[const_trait]`
  --> $DIR/const-impl-requires-const-trait.rs:8:12
   |
LL | pub trait A {}
   | - help: mark `A` as const: `#[const_trait]`
...
LL | impl const A for () {}
   |            ^
   |
   = note: marking a trait with `#[const_trait]` ensures all default method bodies are `const`
   = note: adding a non-const method body in the future would be a breaking change

error[E0207]: the const parameter `host` is not constrained by the impl trait, self type, or predicates
  --> $DIR/const-impl-requires-const-trait.rs:8:6
   |
LL | impl const A for () {}
   |      ^^^^^ unconstrained const parameter
   |
   = note: to constrain `host`, use it in the implemented trait, in the self type, or in an equality with an associated type
   = note: expressions using a const parameter must map each value to a distinct output value
   = note: proving the result of expressions other than the parameter are unique is not supported

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0207`.
